2010-09-16  John Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (write_images): Allow
	arbitrary extensions with format specifier.

2010-09-15  John W. Eaton  <jwe@octave.org>

	* load-path.cc (Faddpath, Frmpath): Document path arguments.

2010-09-15  John Swensen <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (write_image): Allow writing
	arbitrary image types to filenames without an extension (bug #30784).

2010-09-14  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_exist): If looking for any type of file
	or "file", return 7 for directories and 2 for all other types of
	files.

2010-09-14  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (base_graphics_backend::initialize): Rename
	from base_graphics_backend::object_created.  Change all uses.
	(base_graphics_backend::finalize): Rename from
	base_graphics_backend::object_destoyed.  Change all uses.
	(base_graphics_backend::update): Rename from
	base_graphics_backend::property_changed.  Change all uses. 

2010-09-14  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (fltk_backend::object_destroyed):
	Don't attempt to delete window if __plot_stream__ is empty.

2010-09-14  Jordi Gutiérrez Hermoso <jordigh@gmail.com>

	* load-path.cc (genpath): Pass SKIP in recursive call.
	(Fgenpath): Accept list of directories to skip.

2010-09-14  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (BEGIN_CHAR_CLASS_CONVERSION): If we hit EOF but
	have found a match, clear the stream state (bug # 30997).

2010-09-13  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Remove subsref optimization.

2010-09-13  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellindexmat): New DEFUN.

2010-09-12  Jaroslav Hajek  <highegg@gmail.com>

	* ov-fcn-handle.cc (octave_fcn_binder::maybe_binder): Stash name tags
	in the template.
	(octave_fcn_binder::do_multi_index_op): Don't use xelem to ensure